fix Central alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ header{
 }
 
 .daynight{
-    padding: 10px 15px;
+    padding: 15px;
     font-size: 20px;
     border-radius: 50%;
     border: 1px solid var(--indigo);
@@ -78,7 +78,9 @@ main{
     justify-content: center;
     align-items: center;
     margin: auto;
-    padding: 100px;
+    text-align: center;
+    padding: 100px 0;
+    min-width: 500px;
     background-color: rgba(52, 73, 94,0.8);
     border-radius: 20px;
     font-size: 30px;
@@ -87,7 +89,7 @@ main{
 form input{
     width: 100%;
     margin-top: 30px;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
     border: 1px solid white;
 }
